css/style.scss
---
---

@import "/resources/bootstrap/bootstrap.min.css";
/*!
 * Start Bootstrap - Agency Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

$accent-color: #3d400f; //Same as text color
$primary-color: white;
$secondary-color: #ffbd00;
$yellowish-color: #edff40;
$light-blue-color: #dee3ff;
$dark-gray-color :#1b1d09;
$text-color: #3d400f;
$body-font: "titling-gothic-fb";
$secondary-font: "adobe-caslon-pro";
$gothic-medium: 500;
$gothic-regular: 300; 


html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  height: 100%;
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

body {
  background-color: $yellowish-color;
  overflow-x: hidden;
  font-family: $body-font;
  font-style: normal;
  font-weight: $gothic-regular;
  color: $text-color;
  h1, h2 {
    font-weight: 500;
  }
  nav {
    font-weight: 500;
  }
  p {
    line-height: 1.3;
  }

}

.btn-xl {
  padding-top: 1rem;
  font-size: 2.5rem;
  min-width: 18.5rem;
  color: $accent-color;
  border-color: $accent-color;
  border-radius: 0.2rem;
  font-family: $secondary-font;
  font-style: italic;
  line-height: 3.25rem;
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.btn-light-blue {
  background-color: $light-blue-color;
}

.home-logo-link {
  width: 3.5rem;
}

.intro-heading {
  font-family: $secondary-font;
  font-size: 3.3vw;
  line-height: 3.75rem;
  margin-top: 1em;
}

.intro-lead-in {
  font-size: 3.3vw;
  line-height: 3.75rem;
  text-transform: uppercase;
}

.navbar {
  background-color: $yellowish-color;
  text-transform: uppercase;
  margin-top: 0.5rem;
}

.navbar-brand {
  width: 3.5rem;
}

.nav-item {
  text-align: center;
}

.lang-item + .lang-item {
  padding-left: 1rem;
}
/* change the link color */
.navbar-custom .navbar-nav .nav-link {
  color: $text-color;
}
/* change the color of active or hovered links */
.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:focus .nav-link,
.navbar-custom .nav-item:hover .nav-link {
  color: #7082D9;
}

#apply-tickets {
  padding-bottom: 3rem;
}
#apply-tickets  .small-font{
  font-size: 0.75rem;
}
button[aria-expanded=true] > span{
  background-image: url('../resources/img/hc-rasti.png')!important;
}


#lets {
  min-height: 6rem;
  max-width: 1200px;
  b {
    font-weight: 600;
  }
}
/* Italic text between the intro-lead-in */
i {
  font-family: $secondary-font;
  font-weight: bold;
  text-transform: lowercase;
}

#about-section a {
  color: $text-color;
  text-decoration: underline;
}

body #about-section .fa, .fab {
  text-decoration: none;
}

strong {
  font-weight: bold;
}

section {
  padding: 1.5rem 0;
}

.text {
  margin-left: 1.5rem;
}

h1 {
  font-size: 4rem;
  line-height: 1.5;
}
h2 {
  margin-bottom: 1.5rem;
}

.event-date {
  text-transform: uppercase;
}

@media screen and (max-width: 650px) {
   h1 {
    font-size: 2rem;
   }
   h2 {
     font-size: 1.5rem;
   }

   #body {
    font-size: 1rem;
   }
}

#about #apply-tickets {
  background-color: $light-blue-color;
  .content-container {
    display: flex;
    flex-flow: column;
    align-items: center;
  }
}



blockquote {
  border-left: $text-color;
  border-left-style: solid;
  margin-left: -2rem;
  padding-left: 2rem;
  font-family: $secondary-font;
  font-size: 2rem;
  font-style: italic;
  font-weight: bold;
}


.row,
.col-xs-6 {
  margin-left: 0rem;
  margin-right: 0rem;
  padding-left: 0rem;
  padding-right: 0rem;
}

.col-md-3,
.col-md-4 {
  display: inline-block;
  height: 100%;
  text-align: center;
  vertical-align: middle;
}

.hero-text {
  color: $accent-color;
  font-family: $secondary-font;
  font-size: 2.3vw;
}

.organisers-bottom {
  padding-top: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.organisers-bottom h2 {
  text-transform: uppercase;
}

.organisers-bottom-partners {
  padding-top: 0.75rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.vertical-align {
  display: flex;
  align-items: center;
  flex-direction: row;
  padding-top: 10vh;
}

#button-col {
  text-align: left;
}

#date {
  color: $accent-color;
  font-size: 2.3vw;
}

#event-date {
  background-color: $secondary-color;
}

.speaker-name{
  font-weight: $gothic-medium;
}

.speaker-title {
  font-family: $secondary-font;
  font-size: 1.25rem;
}

.speaker-description {
  font-weight: $gothic-regular;
}

.speaker-element {
  display: flex;
  align-items: center;
  justify-content: center;
}
.speaker-element-item {
  display: flex;
  align-items: center;
  justify-content: center;
}
.speaker-element .tooltiptext {
  font-size: 1.1rem;
  visibility: hidden;
  width: 75%;
  min-height: 75%;
  background-color: $yellowish-color;
  color: $text-color;
  text-align: center;
  position: absolute;
  z-index: 1;
  padding: 0.75rem;
}

.tooltiptext .title{
  text-transform: capitalize;
  line-height: 0.25rem;
}
.tooltiptext .sub-title {
  font-family: $secondary-font;
  line-height: 1.1rem;
}


/* Show the tooltip text when you mouse over the tooltip container */
.speaker-element:hover .tooltiptext {
  visibility: visible;
}
/* The widths are defined based on sizes and dimensions of the logos. Wihuri logo is not defined here at all, but
   its original 100px width and height is used as a baseline for these values */
#gofore {
  width: 12.5rem;
}

#greenpeace {
  width: 12.5rem;
  padding-bottom: 3.125rem;
}

#ilmastoveivi {
  width: 6rem;
}

#demoshelsinki {
  width: 12.5rem;
}

#sitra {
  width: 12.5rem;
}

#smartclean {
  width: 12.5rem;
}

#helsinki {
  height: 100px;
}



#lang-bar {
  margin: 0rem 0.75rem 0rem 0rem;
}
.lang-bar-item {
  background-color: transparent;
  border: none;
  margin-right: 1rem;
}
#lang-bar a {
  color: $accent-color;
}
#lang-bar a.active {
  color: #7082D9;
}

#organisers {
  background-color: $dark-gray-color;
}

#organisers h2 {
  color: $light-blue-color;
  font-size: 1rem;
}

#organisers img {
  margin: 0.75rem auto;
}

#page-top {
  min-height: 100%;
  overflow-x: hidden;
  background-size: 50%;
  background-repeat: no-repeat;
  background-position: top;
}

.content-container {
  max-width: 700px;
  margin: auto;
  padding-left: 3rem;
  padding-right: 3rem;
}

#partners-heading {
  font-size: 1rem;
  text-align: center;
  text-transform: uppercase;
}

#privacy-policy {
  color: $light-blue-color;
}

#stay-tuned {
  background-color: $secondary-color;
}

#subscribing h2 {
  color: #3d400f;
}

.bg-image-world {
  background-position: left top;
  background-image: url('../resources/img/helsinki_climate_globe_blue_01.png');
  background-repeat: no-repeat;
  background-size: 40%;
}

#intro {
  padding-bottom: 4rem;
}

#intro .intro-text-header {
  font-family: "adobe-caslon-pro";
  font-style: italic;
  font-size: 5rem;
  line-height: 5rem;
}
#intro .intro-text {
  font-size: 1.5rem;
}

.intro-text > p {
 margin-bottom: 0.1rem;
 line-height: 2.5rem;
}
.top-earth-bg {
  background-position: center bottom;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 7.5rem;
}

.background-whole-world {
  background-position-x: 20%;
  background-image: url('../resources/img/helsinki_climate_globe_blue_01.png');
  background-repeat: no-repeat;
  background-size: 25%
}

#helsinki-small-logo{
  max-width: 70%;
  height: auto;
}
#helsinki-small-logo-front{
  max-width: 60%;
}

// are you with us section
#are-you-with-us {
  padding-top: 6rem;
}

#are-you-with-us-text {
  margin-bottom: 1.5rem;
}

.top-earth-blue {
  background-color: $light-blue-color;
  background-image: url('../resources/img/top_earth_blue.png');
}

#front-page-speaker-grid {
  padding-top: 6rem;
}

//talk show
#talk_show {
  background-color: $text-color;
  color: $light-blue-color;
  padding: 0rem;
}
#talk_show .intro-text-header {
  text-transform: uppercase;
}

#talk_show #talk-text-container {
  max-width: 50%;
}
#talk_show .btn-xl {
  color: $light-blue-color;
  border-color: $light-blue-color;
}

.talk-show-container {
  display: flex;
  justify-content: space-between;
}

// speakers
#speakers .content-container{
  max-width: 1300px;
}

#speakers, #about{
  h1 {
    text-transform: uppercase;
  }
}

#speaker-container {
  display: flex;
}

.speaker-description {
  font-size: 1rem;
  max-width: 400px;
}

#speakers-footer {
  background-size: 25%
}

#top-earth-yellow {
  background-image: url('../resources/img/top_earth_yellow.png');
}

.fa-twitter{
  color: $text-color;
}

@media screen and (max-width: 1200px) {
  #speaker-container{
    justify-content: center;
  }
}

@media screen and (max-width: 991px) {
  
  #intro {
    padding-bottom: 1.5rem;
  }
  
  .content-container {
    padding-left: 3.25rem;
    padding-right: 3.5rem;
  }

  .navbar-collapse.collapse.show {
    height: 100vh;
  }
  .navbar-nav {
    height: auto;
  }
  .earth-side {
    display: none;
  }
  .navbar-custom {
    display: flex;
    justify-content: center;
  }
  #lang-bar {
    justify-content: center;
    flex-direction: row;
    margin-left: auto!important;
    margin-right:  auto!important;
    .lang-bar-item:last-child {
      margin-right: 0rem;
    }
  }
  .intro-text,
  #button-col {
    text-align: center;
  }

  .talk-show-container {
    justify-content: center;
  }

  #talk-text-container {
    margin-top: 3rem;
    margin-bottom: 3rem;
  }

  .btn-xl {
    font-size: 1rem;
    min-width: 9rem;
    line-height: 1.75rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    margin-top: 1rem;
  }
  .intro-lead-in {
    line-height: 2rem;
  }

  .navbar-link-separator {
    display: none;
  }

  .vertical-align {
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-top: 10vh;
  }

  .speaker-element {
    display: block;
    align-items: center;
    justify-content: center;
  }
  .speaker-element .tooltiptext {
    visibility: visible;
    width: auto;
    height: auto;
    background-color: transparent;
    position: relative;
    z-index: 1;
  }

  .lang-item + .lang-item {
    padding-left: 1rem;
  }
  .organisers-bottom > div{
   padding-bottom:1rem;
  }

  .organisers-bottom-partners > div{
    padding-bottom:1rem;
   }
  /* Show the tooltip text when you mouse over the tooltip container */
  .speaker-element:hover .tooltiptext {
    visibility: visible;
  }
}

